[gd_scene load_steps=9 format=3 uid="uid://cmqq5tee3t843"]

[ext_resource type="Texture2D" uid="uid://d21285ecfpxf7" path="res://customer.png" id="1_ef8t1"]
[ext_resource type="Script" uid="uid://dqp2iv60ci1ts" path="res://scripts/upgrade_node.gd" id="2_a3bb2"]
[ext_resource type="Texture2D" uid="uid://c8rlmdkje5782" path="res://upgrade_border.png" id="2_d2xs7"]
[ext_resource type="Theme" uid="uid://du2jkyh4el8aw" path="res://ui/GameSceneTheme.tres" id="4_03nrq"]
[ext_resource type="LabelSettings" uid="uid://cgxq5mw10evav" path="res://ui/LabelSettings/UpgradeNodeLabelSettings.tres" id="5_4kcty"]
[ext_resource type="Script" uid="uid://bttbimes54k4a" path="res://scripts/ui_shaker.gd" id="6_go4um"]
[ext_resource type="Script" uid="uid://i0ncmvapuued" path="res://scripts/audio/audio_library.gd" id="7_4kcty"]
[ext_resource type="Texture2D" uid="uid://ctbvc4hmndjcq" path="res://icons/tick.png" id="8_f37n0"]

[node name="UpgradeNode" type="Node2D"]
script = ExtResource("2_a3bb2")

[node name="Sprite" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -17.0
offset_right = 18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(27, 26)
texture = ExtResource("1_ef8t1")
expand_mode = 3
stretch_mode = 5

[node name="Border" type="TextureRect" parent="Sprite"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(25, 25)
texture = ExtResource("2_d2xs7")
stretch_mode = 4

[node name="ColorRect" type="ColorRect" parent="Sprite/Border"]
z_index = -1
layout_mode = 1
offset_right = 50.0
offset_bottom = 50.0
color = Color(0.491583, 0.491583, 0.491583, 1)

[node name="Popup" type="CenterContainer" parent="."]
visible = false
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -377.0
offset_right = 238.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(220, 363)

[node name="PanelContainer" type="PanelContainer" parent="Popup"]
layout_mode = 2
theme = ExtResource("4_03nrq")

[node name="PopupInfo" type="VBoxContainer" parent="Popup/PanelContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Name" type="Label" parent="Popup/PanelContainer/PopupInfo"]
layout_mode = 2
text = "Customers"
label_settings = ExtResource("5_4kcty")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyPerSec" type="Label" parent="Popup/PanelContainer/PopupInfo"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "+$10 a second"
label_settings = ExtResource("5_4kcty")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Control" type="Control" parent="Popup/PanelContainer/PopupInfo"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Level" type="Label" parent="Popup/PanelContainer/PopupInfo/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.5
offset_right = 130.5
offset_bottom = 42.0
grow_horizontal = 2
pivot_offset = Vector2(132, 21)
text = "Lv. 0/10"
label_settings = ExtResource("5_4kcty")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control2" type="Control" parent="Popup/PanelContainer/PopupInfo"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Cost" type="Label" parent="Popup/PanelContainer/PopupInfo/Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -130.5
offset_right = 130.5
offset_bottom = 42.0
grow_horizontal = 2
pivot_offset = Vector2(129, 18)
text = "$100"
label_settings = ExtResource("5_4kcty")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shaker3" type="Control" parent="." node_paths=PackedStringArray("target")]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("6_go4um")
target = NodePath("../Popup/PanelContainer/PopupInfo/Control/Level")
max_motion_factor = 1.5

[node name="Shaker4" type="Control" parent="." node_paths=PackedStringArray("target")]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("6_go4um")
target = NodePath("../Popup/PanelContainer/PopupInfo/Control2/Cost")
max_motion_factor = 1.5

[node name="Shaker" type="Control" parent="." node_paths=PackedStringArray("target")]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("6_go4um")
target = NodePath("../Sprite")
max_motion_factor = 1.5

[node name="Shaker2" type="Control" parent="." node_paths=PackedStringArray("target")]
layout_mode = 3
anchors_preset = 0
mouse_filter = 1
script = ExtResource("6_go4um")
target = NodePath("../Popup")
max_motion_factor = 1.5

[node name="ClosePopupTimer" type="Timer" parent="."]

[node name="DebounceTimer" type="Timer" parent="."]
one_shot = true

[node name="Button" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2

[node name="SfxPlayer" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("7_4kcty")

[node name="Tick" type="Sprite2D" parent="."]
visible = false
position = Vector2(8, 13)
texture = ExtResource("8_f37n0")
